feat: add textMuted and textOnColor tokens with compact SwatchStrip
- Added textOnColor token to types and color generation
- Redesigned SwatchStrip to show 10 colors in compact layout
- Color values now displayed inside swatches with auto-contrast text
- Updated PreviewSection to use textMuted token instead of opacity
- Updated App.tsx related tokens mapping
- Added new tokens to Tailwind config

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                 surface2: "var(--surface2)",
                 text: "var(--text)",
                 muted: "var(--text-muted)",
+                textMuted: "var(--text-muted)",
+                textOnColor: "var(--text-on-color)",
                 primary: "var(--primary)",
                 primaryFg: "var(--primary-fg)",
                 secondary: "var(--secondary)",
