--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
       };
     </script>
     <style>
-      /* Prevent horizontal scroll on mobile */
+      /* Prevent horizontal scroll on mobile; themed bg prevents white bleed-through */
       html, body {
         overflow-x: hidden;
         max-width: 100vw;
+        background-color: var(--bg, #f0f0f0);
       }
-      
-      /* Custom Scrollbar for a cleaner look */
+
+      /* Custom Scrollbar — uses theme border token */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
@@ -126,13 +127,18 @@
         background: transparent;
       }
       ::-webkit-scrollbar-thumb {
-        background: #cbd5e1;
+        background: var(--border, #cbd5e1);
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #94a3b8;
+        background: var(--text-muted, #94a3b8);
       }
-      
+
+      /* Theme-aware hover state — uses inherited text color */
+      .hover-themed:hover {
+        background-color: color-mix(in srgb, currentColor 10%, transparent);
+      }
+
       /* Hide scrollbar for elements with no-scrollbar class */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
@@ -140,6 +146,134 @@
       .no-scrollbar {
         -ms-overflow-style: none;
         scrollbar-width: none;
+      }
+
+      /* Theme-aware range sliders.
+         Thumb uses currentColor so each context can set color via text-* or style. */
+      input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        background: transparent;
+        cursor: pointer;
+      }
+      input[type="range"]:focus {
+        outline: none;
+      }
+      input[type="range"]::-webkit-slider-runnable-track {
+        height: 6px;
+        border-radius: 9999px;
+        background: color-mix(in srgb, currentColor 15%, transparent);
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: currentColor;
+        margin-top: -5px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+      }
+      input[type="range"]::-moz-range-track {
+        height: 6px;
+        border-radius: 9999px;
+        background: color-mix(in srgb, currentColor 15%, transparent);
+      }
+      input[type="range"]::-moz-range-thumb {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: currentColor;
+        border: none;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+      }
+
+      /* Theme-aware checkboxes — replace browser-default white with theme tokens */
+      input[type="checkbox"] {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 1em;
+        height: 1em;
+        border: 2px solid var(--border, #888);
+        border-radius: 0.2em;
+        background: var(--card, transparent);
+        cursor: pointer;
+        position: relative;
+        vertical-align: middle;
+        flex-shrink: 0;
+      }
+      input[type="checkbox"]:checked {
+        background: var(--primary, #3b82f6);
+        border-color: var(--primary, #3b82f6);
+      }
+      input[type="checkbox"]:checked::after {
+        content: '';
+        position: absolute;
+        left: 3px;
+        top: 0px;
+        width: 5px;
+        height: 9px;
+        border: solid var(--primary-fg, white);
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+      }
+      input[type="checkbox"]:focus-visible {
+        outline: 2px solid var(--ring, #60a5fa);
+        outline-offset: 1px;
+      }
+
+      /* Suppress browser click/focus highlights on buttons & selects.
+         All focus rings use the theme ring token — never the default blue/white. */
+      button:focus,
+      select:focus {
+        outline: none;
+        box-shadow: none;
+      }
+      button:focus-visible,
+      select:focus-visible {
+        outline: 2px solid var(--ring, #60a5fa);
+        outline-offset: 2px;
+      }
+      button, select {
+        -webkit-tap-highlight-color: transparent;
+      }
+      select {
+        -webkit-appearance: none;
+      }
+
+      /* Themed borders — use CSS variable directly, bypasses Tailwind CDN
+         parsing ambiguity where border-t-border doesn't resolve t.border */
+      .border-themed {
+        border-color: var(--border);
+      }
+
+      /* Themed placeholder text — Tailwind /opacity modifiers can't decompose
+         CSS variables into RGB channels, so we style ::placeholder globally */
+      ::placeholder {
+        color: var(--text-muted);
+        opacity: 0.7;
+      }
+
+      /* Theme-aware radio buttons */
+      input[type="radio"] {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 1em;
+        height: 1em;
+        border: 2px solid var(--border, #888);
+        border-radius: 50%;
+        background: var(--card, transparent);
+        cursor: pointer;
+        vertical-align: middle;
+        flex-shrink: 0;
+      }
+      input[type="radio"]:checked {
+        background: var(--primary, #3b82f6);
+        border-color: var(--primary, #3b82f6);
+        box-shadow: inset 0 0 0 2.5px var(--card, white);
+      }
+      input[type="radio"]:focus-visible {
+        outline: 2px solid var(--ring, #60a5fa);
+        outline-offset: 1px;
       }
     </style>
     <script type="importmap">
